--- a/views/register.pug
+++ b/views/register.pug
@@ -5,6 +5,7 @@ block container
       .social-login
         a(href="/auth/github") #[img(src="/static/images/github.png" width="40px")] Sign up with github
         a(href="/auth/twitter") #[img(src="/static/images/twitter.png" width="40px")] Sign up with twiter
+        a(href="/auth/google") #[img(src="/static/images/google.png" width="40px")] Sign up with google
       form.login(action="/register", method="post")
         h1 Register
         if usernameError.length > 0
