--- a/views/layout/general-layout/aside.pug
+++ b/views/layout/general-layout/aside.pug
@@ -1,6 +1,29 @@
-include ../movieByQuery-layout/section-container.pug
 aside.aside
   h1 Most viewed
   .arrow-down
-  +section-container(mostMoviesView)
+  section.section-container-aside
+    if mostMoviesView
+      each article in mostMoviesView
+        article.movie
+          a(href=`/id/${article._id}`)
+            .poster-container
+              .img-container
+                img(src=`${article.poster || "" }`)
+              .movie-info
+                h3.movie-year #{ parseInt(article.year) || 'n/a'}
+                h3.movie-rating
+                  if article.imdb && article.imdb.rating
+                    span.rating-star &#9733; 
+                    |#{ article.imdb.rating }
+                  else
+                    | n/a
+              h1.movie-title= article.title
+              .resume
+                h3 #{article.title } #{article.type && `(${article.type})`}
+                p= article.plot
+                span Countries: 
+                  span #{article.countries && article.countries.join(', ')}
+                br
+                span Genres: 
+                  span #{article.genres && article.genres.join(', ')}
 
