--- a/views/layout/general-layout/layout.pug
+++ b/views/layout/general-layout/layout.pug
@@ -14,15 +14,16 @@ html(lang="en")
       |:root{--bg-container-color: #0f0f0f; --text-color: #e0e0e0; --text-color-2: #fff; --gradian-color-1:#000; --gradian-color-2: #808080; --gradian-color-3: #808080; --gradian-color-4: #7a7a7a; --bg-clr-1: #1f1f1f; --shadow-1: #858585}
     else
       |:root{--bg-container-color: #fafafa; --text-color: #808080; --text-color-2: #191919; --gradian-color-1:#fff; --gradian-color-2: #f0f0f0; --gradian-color-3: #e5e5e5; --gradian-color-4: #ccc; --bg-clr-1: #e0e0e0; --shadow-1: #7a7a7a}
-    |.nav-bare li ul{visibility: hidden;position: absolute;top: 100%;left: 0;background: var(--bg-clr-1);-webkit-transform: scale(1, 0);-ms-transform: scale(1, 0);transform: scale(1, 0);-webkit-transform-origin: top center;-ms-transform-origin: top center;transform-origin: top center; -webkit-transition: all 200ms ease-in 300ms; -o-transition: all 200ms ease-in 300ms; transition: all 200ms ease-in 300ms;display: inline-block;}
+    //- |.menu ul{visibility: hidden;position: absolute;top: 100%;background: var(--bg-clr-1);-webkit-transform: scale(1, 0);-ms-transform: scale(1, 0);transform: scale(1, 0);-webkit-transform-origin: top center;-ms-transform-origin: top center;transform-origin: top center; -webkit-transition: all 200ms ease-in 300ms; -o-transition: all 200ms ease-in 300ms; transition: all 200ms ease-in 300ms;display: inline-block;}
+    |.menu ul{visibility: hiden}
   body
     block body
-      block header
-        include ./header.pug
-      .container   
-        block container
+      .container  
+        block header
+          include ./header.pug 
         block aside
           include ./aside.pug 
+        block container
         block foot
           footer.footer
             .github
